# BA-CY

./: Cargo.toml  README.md  Uniffi.toml  build.rs
.github/workflows/: CI.yml  build.yml  pypi.yml
crates/bacy/: Cargo.toml
crates/bacy-ffi/: Cargo.toml
crates/bacy-ffi/src/: lib.rs
crates/bacy-ffi/src/api/: c_api.rs  mod.rs  uniffi_api.rs
crates/bacy/src/: error.rs  lib.rs
crates/bacy/src/crypto/: aes.rs  md5.rs  mod.rs
crates/bacy/src/hash/: crc.rs  mod.rs  sha.rs
crates/bacy/src/math/: mersenne.rs
crates/bacy/src/utils/: crc_manipulator.rs  mod.rs  strategy.rs
src/: bacy.udl  bindings.rs  catalog.rs  crc.rs  error.rs  hash.rs  lib.rs  memorypack.rs  table_encryption.rs  table_zip.rs
src/crypto/: md5.rs  mod.rs  table.rs  xor.rs
src/hash/: crc.rs  mod.rs  xxhash.rs
src/lib/: catalog.rs  crc_service.rs  hash.rs  memorypack.rs  table_encryption.rs  table_zip.rs
src/math/: mersenne.rs
src/utils/: crc_manipulator.rs  mod.rs  strategy.rs
