[package]
name = "bacy"
version = "2.5.0"
edition = "2024"

[[bin]]
name = "bindgen"
path = "bindgen.rs"
required-features = ["uniffi"]

[lib]
name = "bacy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
crc32fast = "1.5.0"
flatbuffers = "25.2.10"
md-5 = "0.10.6"
once_cell = "1.21.3"
parking_lot = "0.12.4"
rand_mt = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64"] }
zip = { version = "6.0.0", features = ["aes-crypto", "deflate"] }
uniffi = { version = "0.30", features = ["cli"], optional = true }

[build-dependencies]
uniffi = { version = "0.30.0", features = [ "build" ], optional = true }
