[package]
name = "bacy"
version = "3.3.0"
edition = "2024"

[lib]
name = "bacy"
path = "src/lib.rs"

[dependencies]
md-5 = "0.11"
hmac = "0.13"
sha2 = "0.11"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
crc32fast = "1.5"
rand_mt = "6.0"
base64 = "0.22"
thiserror = "2.0"
flatbuffers = "25.12"
tokio = { version = "1", features = ["fs", "io-util"] }